--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
-    "node-7z": "^3.0.0",
-    "node-fetch": "^3.3.0",
-    "simple-rate-limiter": "^0.2.3",
-    "unzip-stream": "^0.3.1"
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
