--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^3.2.4",
     "cors": "^2.8.5",
     "decompress": "^4.2.1",
+    "discord-oauth2": "^2.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
