--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.4",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "decompress": "^4.2.1",
     "discord-oauth2": "^2.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "nodejs-web-scraper": "^6.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
