--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
     "node-fetch": "^3.3.0",
-    "nodejs-web-scraper": "^6.1.3"
+    "nodejs-web-scraper": "^6.1.3",
+    "request-rate-limiter": "^2.0.3",
+    "smart-request-balancer": "^2.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
